--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,8 +20,13 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
-
-
+  time:
+    am: утра
+    formats:
+      default: ! '%a, %d %b %Y, %H:%M:%S'
+      long: ! '%d %B %Y, %H:%M'
+      short: ! '%d %b, %H:%M'
+    pm: вечера
   date:
     abbr_day_names: [Вс,Пн,Вт,Ср,Чт,Пт,Сб]
     abbr_month_names: ["",янв.,фев.,мар.,апр.,мая,июн.,июл.,авг.,сент.,окт.,нояб.,дек.]
