User role rendering with rights icons. Favicon added. YML with estate names fixed. Page-proofs almost done.

--- a/config/locales/ru_models.yml
+++ b/config/locales/ru_models.yml
@@ -3,8 +3,8 @@ ru:
     attributes:
       user:
         role:
-          owner: частное лицо
-          agent: агент, риелтор
+          owner: собственник
+          agent: агентство
         password: Пароль
         password_confirmation: Подтверждение пароля
         name: Имя
