--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -312,6 +312,7 @@ ru:
       price_from: 'Цена'
       not_for_agents: 'Не для агентов'
       mortgage: 'Ипотека'
+      owner: 'Частные'
       comment: 'Комментарий'
       private_comment: 'Скрытый комментарий'
     offer:
