first version of settings page. TODO custom redirect to settings_path, callback before_destroy for user's account.

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -194,6 +194,7 @@ ru:
       submit: Сохранить
       update: Сохранить
       confirm: Подтверждение
+      delete: Удалить
     navigate:
       back: Назад
 
