--- a/config/locales/ru_models.yml
+++ b/config/locales/ru_models.yml
@@ -5,9 +5,11 @@ ru:
         roles:
           owner: собственник
           agent: агентство
+        role: роль
 
         password: Пароль
         password_confirmation: Подтверждение пароля
+        current_password: текущий пароль
         name: Имя
         phones: Телефоны
       
