Abuse - mail on status update.

--- a/config/locales/ru_models.yml
+++ b/config/locales/ru_models.yml
@@ -20,6 +20,10 @@ ru:
         moderator_comment: 'комментарий модератора'
         user: 'автор'
         abuse_type: 'тип жалобы'
+        status:
+          accepted: 'принята'
+          wait: 'в ожидании'
+          not_accepted: 'отклонена'
       phone:
         original: Номер телефона
         number: Номер телефона
