--- a/config/locales/ru_admin.yml
+++ b/config/locales/ru_admin.yml
@@ -43,17 +43,17 @@ ru:
       message: "Сообщение"
     actions:
       accept:
-        menu: 'accept'
-        breadcrumb: 'accept'
-        title: 'accept'
-        link: "accept"
-        done: "сохранено"
+        menu: 'Утвердить'
+        breadcrumb: 'Утвердить'
+        title: 'Утвердить'
+        link: "Утвердить"
+        done: "Жалоба утверждена"
       decline:
-        menu: 'decline'
-        breadcrumb: 'decline'
-        title: 'decline'
-        link: "decline"
-        done: "сохранено"
+        menu: 'Отклонить'
+        breadcrumb: 'Отклонить'
+        title: 'Отклонить'
+        link: "Отклонить"
+        done: "Жалоба отклонена"
       import_donrio:
         menu: 'импорт donrio'
         breadcrumb: 'импорт donrio'
