--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -304,19 +304,19 @@ ru:
       comment: ''
       private_comment: ''
     attributes:
-      floor_from: 'Этаж'
-      floor_cnt_from: 'Этажность'
-      room_from: 'Количество комнат'
-      landmark: 'Ориентир'
-      space_from: 'Площадь'
-      outdoors_space_from: 'Площадь участка'
-      price_from: 'Цена'
-      not_for_agents: 'Не для агентов'
-      mortgage: 'Ипотека'
+      floor_from: 'этаж'
+      floor_cnt_from: 'этажность'
+      room_from: 'количество комнат'
+      landmark: 'ориентир'
+      space_from: 'площадь'
+      outdoors_space_from: 'площадь участка'
+      price_from: 'цена'
+      not_for_agents: 'не для агентов'
+      mortgage: 'ипотека'
       owner: 'частные'
-      comment: 'Комментарий'
-      private_comment: 'Скрытый комментарий'
-      expired: 'Устаревшие'
+      comment: 'комментарий'
+      private_comment: 'скрытый комментарий'
+      expired: 'устаревшие'
     offer:
       buy: 'куплю'
       sale: 'продажа'
