--- a/config/locales/ru_admin.yml
+++ b/config/locales/ru_admin.yml
@@ -42,6 +42,12 @@ ru:
       item: "Элемент"
       message: "Сообщение"
     actions:
+      make_admin:
+        menu: 'Утвердить администратора'
+        breadcrumb: 'Утвердить администратора'
+        title: 'Утвердить администратора'
+        link: "Утвердить администратора"
+        done: "администратор утвержден"
       accept:
         menu: 'Утвердить'
         breadcrumb: 'Утвердить'
