--- a/config/locales/ru_models.yml
+++ b/config/locales/ru_models.yml
@@ -64,6 +64,9 @@ ru:
         street: 'улицы'
         address: 'адреса'
         landmark: 'ориентиры'
+        cottage: 'коттеджные посёлки'
+        garden: 'сады'
+        complex: 'жилищные комплексы'
 
       advertisement:
 
