--- a/config/locales/ru_admin.yml
+++ b/config/locales/ru_admin.yml
@@ -41,6 +41,7 @@ ru:
       created_at: "Дата/Время"
       item: "Элемент"
       message: "Сообщение"
+      action: "Действия"
     actions:
       abuses:
         menu: 'Жалобы'
