users settings fixes

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -40,7 +40,7 @@ ru:
     registrations:
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       inactive_signed_up: "Добро пожаловать! Вы успешно зарегистрировались. Но пока вы не можете войти в систему, т.к. ваша учётная запись %{reason}."
-      updated: "Ваша учётная запись изменена."
+      updated: "Настройки сохранены."
       destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть вас."
       reasons:
         inactive: 'неактивна'
