--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -313,7 +313,7 @@ ru:
       price_from: 'цена'
       not_for_agents: 'скрывать это объявление от зарегистрированых на сайте агентов'
       mortgage: 'ипотека'
-      owner: 'частные'
+      owner: 'без посредников'
       comment: 'комментарий'
       private_comment: 'скрытый комментарий'
       expired: 'устаревшие'
